hphp/hack/test/typecheck/inout/bad_inout_decl_variadic.php.exp
File "bad_inout_decl_variadic.php", line 3, characters 15-32:
A variadic parameter `...` cannot have a modifier that changes the calling convention, like `inout`. (Parsing[1002])
